<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemHecho"
        android:title="@string/marcar_hecho"
        android:icon="@drawable/ic_done"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemModificar"
        android:title="@string/modificar_tarea"
        android:icon="@drawable/ic_modify"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemRemove"
        android:title="@string/borrar_tarea"
        android:icon="@drawable/ic_remove"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemActividad"
        android:title="@string/ver_actividad"
        app:showAsAction="never" />

</menu>