<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Actividades.TareaActivity">

    <TextView
        android:id="@+id/labNombreTarea"
        android:text="Colorear casa"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/descripcion"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tbDescripcionTarea"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btnAceptarTarea"
        android:text="@string/guardar"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/SUBTAREAS"
        android:textSize="15dp"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lvSubtareas"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btnAñadirSubtarea"
        android:text="@string/añadir_elemento"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>